# family-ocr

./: .gitignore  LICENSE  pyproject.toml
family_ocr/: app.py
tests/: test_family_ocr.py
